// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen /> Debe cargarse correctamente 1`] = `
<div>
  <h1>
    Busquedas
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h3>
        Buscar
      </h3>
      <hr />
      <div
        className="form-group"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            className="form-control"
            name="searchText"
            onChange={[Function]}
            placeholder="Nombre del personaje..."
            type="text"
            value=""
          />
          <button
            className="btn btn-primary mt-3"
            type="submit"
          >
            Buscar
          </button>
        </form>
      </div>
    </div>
    <div
      className="col-7"
    >
      <h3>
        Resultados
      </h3>
      <hr />
      <p
        className="alert alert-info"
      >
        Ningun heroe a buscar!!
      </p>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> Debe mostrar a batman y el input con el valor del queryString 1`] = `
<div>
  <h1>
    Busquedas
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h3>
        Buscar
      </h3>
      <hr />
      <div
        className="form-group"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            className="form-control"
            name="searchText"
            onChange={[Function]}
            placeholder="Nombre del personaje..."
            type="text"
            value="batman"
          />
          <button
            className="btn btn-primary mt-3"
            type="submit"
          >
            Buscar
          </button>
        </form>
      </div>
    </div>
    <div
      className="col-7"
    >
      <h3>
        Resultados
      </h3>
      <hr />
      <div
        className="col"
      >
        <div
          className="card"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="col-4"
            >
              <img
                alt="Batman"
                className="card-img-top"
                src="/assets/images/dc-batman.jpg"
              />
            </div>
            <div
              className="col-8"
            >
              <h4
                className="card-title mt-2"
              >
                Batman
              </h4>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              >
                Detective Comics #27
              </p>
              <a
                className=""
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                Mas...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
